implement GET history with pagination and sort, update spec, renamed account handler & service to balance
